v1.0.6 fixed overflow-x issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body, html, #root {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow-x: hidden;
   box-sizing: border-box;
 }
 
@@ -337,4 +338,23 @@ a {
     padding: 1rem 0.5rem;
     max-width: 98vw;
   }
+}
+
+/* App.css */
+.video-responsive {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  padding-top: 25px;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.video-responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
